# muse

./: .gitignore  README.md  pyproject.toml
data/personas/: collaborative.md  critic.md  roast.md  technical.md
docs/plans/: 2026-04-05-muse-implementation.md
docs/specs/: 2026-04-05-muse-cli-art-tool-design.md
src/muse/: __init__.py  cli.py  config.py  models.py  preview.py  review.py  session.py
src/muse/gallery/: __init__.py  server.py
src/muse/gallery/static/: app.js  index.html  style.css
src/muse/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
tests/: conftest.py  test_cli.py  test_config.py  test_gallery_api.py  test_integration.py  test_models.py  test_providers.py  test_review.py  test_session.py
